stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_type_decl.snap
---
source: tests/fixtures.rs
assertion_line: 1275
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_type_decl.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate type declaration
   ╭─[tests/fixtures/diagnostics/types/duplicate_type_decl.ml:2:6]
 1 │ type token = Ident(String)
 2 │ type token = KwFn
   ·      ──┬──
   ·        ╰── this type name is already declared in this module
 3 │ 
   ╰────
  help: choose a unique type name for each type declaration
